--- a/Main.storyboard
+++ b/Main.storyboard
@@ -3578,7 +3578,7 @@
                         <barButtonItem key="leftBarButtonItem" image="ic_arrow_back_18pt" id="nep-21-Aev">
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
-                                <action selector="close:" destination="pEl-o7-5XO" id="mfS-I5-5nY"/>
+                                <action selector="backOrDismiss:" destination="pEl-o7-5XO" id="x0W-SX-ATo"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -3587,6 +3587,30 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9rr-w9-95i" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-5559.420289855073" y="1444.5652173913045"/>
+        </scene>
+        <!--自己-->
+        <scene sceneID="Kma-gt-uwP">
+            <objects>
+                <navigationController storyboardIdentifier="ShowPayPage" id="dCi-2g-HNw" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="自己" image="ic_perm_identity_18pt" id="YuW-pX-A5q"/>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="47V-LD-ogP">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="textShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="pEl-o7-5XO" kind="relationship" relationship="rootViewController" id="PIV-8Y-Gzd"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Rkj-ld-Nr2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-6535" y="1445"/>
         </scene>
     </scenes>
     <resources>
@@ -3606,6 +3630,7 @@
         <image name="tab_new_post" width="18" height="18"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="PIV-8Y-Gzd"/>
         <segue reference="cB8-Pd-AFY"/>
         <segue reference="wLO-He-BF0"/>
         <segue reference="Ysv-Xy-VAF"/>
